--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,19 +2,17 @@ appName = pixlr
 #language code: en 
 #locale code: AU 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:41:05 CST 2016 
  
 #=================== labels for Pixlr Tool =================# 
 
 appName  =pixlr
-error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
 activity.helptext  =Edit images in Pixlr image editor
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
-error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
 tool.display.name  =Pixlr
-tool.description  =Pixlr Image Editing Tool
+tool.description  =Pixlr image editing tool
 activity.title  =Pixlr
-activity.description  =Pixlr Image Editing Tool
+activity.description  =Pixlr image editing tool
 pageTitle.authoring  =Pixlr Authoring
 button.basic  =Basic
 button.advanced  =Advanced
@@ -22,10 +20,6 @@ label.authoring.basic.title  =Title:
 label.authoring.basic.content  =Content:
 advanced.lockOnFinished  =Lock when finished
 advanced.allowViewOthersImages  =Allow learners to view other learners images
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Filename
-label.type  =Type
 link.download  =Download
 message.updateSuccess  =Changes saved
 message.unsavedChanges  =Page contains unsaved changes
@@ -38,16 +32,15 @@ button.statistics  =Statistics
 titleHeading.summary  =Summary
 titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit Activity
-titleHeading.exportPortfolio  =Export Portfolio
 heading.group  =Group {0}:
 heading.totalLearners  =Number of Learners:
 heading.totalLearnersInGroup  =Total Number of Learners in Group:
 heading.totalFinishedLearnersInGroup  =Number of Finished Learners:
 message.summary  =There is no summary available for this tool.
 label.view  =View
-label.notAvailable  =Not Available
+label.notAvailable  =Not available
 heading.learner  =Learner
-heading.notebookEntry  =Notebook Entry
+heading.notebookEntry  =Notebook entry
 button.cancel  =Cancel
 button.ok  =OK
 button.done  =Done
@@ -58,12 +51,6 @@ label.cancel  =Cancel
 label.created  =Created
 label.lastModified  =Last modified
 label.notebookEntry  =Notebook entry
-error.missingParam  =Unable to continue. {0} is missing.
-error.exceedMaxFileSize  =File size exceeded
-error.exception.NbApplication  =An internal error has occurred with the Pixlr Tool. If reporting this error, please report: <br/> <b>{0}</b>
-error.defineLater  =Sorry, the activity is not ready yet. Please wait for the instructor to finishing defining the activity.
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.mandatoryField  ={0} field is mandatory.
 button.try.again  =Try Again
 button.finish  =Next Activity
 message.alertContentEdit  =Warning: One or more learners have accessed this activity. Changing this content will result in learners getting different information.
@@ -75,34 +62,34 @@ label.authoring.basic.instructions  =Instructions:
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
-label.authoring.basic.add.image  =Add Image
+label.authoring.basic.add.image  =Add image
 error.resource.image.not.alowed.format  =Allowed file formats: gif, png, jpg
 error.resource.item.file.blank  =File can not be blank.
 error.msg.upload.file.not.found  =Could not find upload file {0}.
 error.file.upload.failed  =Image upload failed, please check your image file and try again.
 label.authoring.remove  =Remove
-learner.edit.image  =Edit Image in Pixlr
+learner.edit.image  =Edit image in Pixlr
 tooltip.openfullsize  =Click to open full size
 advanced.reflectOnActivity  =Add a notebook at end of Pixlr with the following instructions:
 button.continue  =Continue
 button.edit  =Edit
-button.viewAll  =View all learner images
-learner.title.viewAll  =View All Pixlr Images
-button.redo  =Redo Activity
+button.viewAll  =View all learners' images
+learner.title.viewAll  =View all Pixlr images
+button.redo  =Redo activity
 button.refresh  =Refresh
 message.imageListEmpty  =No images to display as no learners have edited their images yet.
 error.retreiving.image  =There was an error retrieving the image from pixlr.com, please contact the system administrator.
 message.imageEdited  =Image successfully edited.
 button.close  =Close
 monitoring.th.learner  =Learner
-monitoring.th.image  =Edited Image
-monitoring.th.reflection  =Notebook Entry
+monitoring.th.image  =Edited image
+monitoring.th.reflection  =Notebook entry
 monitoring.hideImage  =Hide image from other learners
 monitoring.showImage  =Show image to other learners
 message.imageHidden  =Image hidden by instructor
 monitor.summary.td.notebookInstructions  =Notebook instructions
 title.sessions  =Sessions
-title.originalImage  =Original Image
+title.originalImage  =Original image
 message.imageNotAvailable  =Image not available, either it has not yet been edited or it has been deleted.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
 admin.pixlrLanguageCSV  =Enter the comma-separated language key values supported by Pixlr
@@ -114,7 +101,9 @@ pageTitle.admin  =Pixlr Admin
 admin.return  =Back to Maintain LAMS
 output.desc.image.url.definition.pixlr  =Image URL from Pixlr
 button.submit  =Finish
-message.no.reflection.available =No notebook entry was added.
+message.no.reflection.available  =No notebook entry has been added.
+label.image.options  =Image options
+label.activity.completion  =End of activity
 
 
-#======= End labels: Exported 108 labels for en AU =====
+#======= End labels: Exported 98 labels for en AU =====
