--- a/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_pixlr/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,20 +2,13 @@ appName = pixlr
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:41:03 CST 2016 
  
 #=================== labels for Pixlr Tool =================# 
 
 appName  =pixlr
-error.contentrepository  =Ha ocurrido un error al tratar de borrar/guardar las instrucciones en el archivo. Estos archivos puede que no se hayan guardado correctamente
-button.instructions  =Instrucciones
-instructions.uploadOfflineInstr  =Archivos de Instrucciones modo offline
-instructions.uploadOnlineInstr  =Archivos de Instrucciones modo online
-instructions.offlineInstructions  =Instrucciones modo offline
-instructions.onlineInstructions  =Instrucciones modo online
 activity.helptext  =Editar imagenes con Pixlr
 message.contentInUseSet  =No se pueden hacer modificaciones del contenido ya que por lo menos un estudiante ha empezado con esta actividad
-error.content.locked  =Se ha bloqueado el contendio ya que por lo menos un estudiante ha accedido el contenido.
 tool.display.name  =Pixlr
 tool.description  =Herramienta para dibujo Pixlr
 activity.title  =Pixlr
@@ -23,24 +16,15 @@ activity.description  =Herramienta para dibujo Pixlr
 pageTitle.authoring  =Autoria Pixlr
 button.basic  =B\u00e1sico
 button.advanced  =Avanzado
-button.upload  =Subir
 label.authoring.basic.title  =T\u00edtulo
 label.authoring.basic.content  =Contenido
 advanced.lockOnFinished  =No permitir modificaciones una vez terminado
 advanced.allowViewOthersImages  =Permitir que los estudiantes vean los dibujos de otros
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Nombre de archivo
-label.type  =Tipo
-label.attachments  =Archivos adjuntos
-link.view  =Ver
 link.download  =Descargar
-link.delete  =Boarra
 message.updateSuccess  =Cambios guardados
 message.unsavedChanges  =Esta p\u00e1gina tiene cambias que no han sido guardados
 pageTitle.learning  =Herramienta para dibujo Pixlr
 message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
-message.runOfflineSet  =Esta actividad ha sido se\u00f1alada para realizarse en forma offline. Por favor, consulte con su profesor.
 pageTitle.monitoring  =Pixlr Seguimiento
 button.summary  =Resumen
 button.editActivity  =Editar Activiidad
@@ -48,7 +32,6 @@ button.statistics  =Estad\u00edsticas
 titleHeading.summary  =Resumen
 titleHeading.statistics  =Estad\u00edsticas
 titleHeading.editActivity  =Editar Activiidad
-titleHeading.exportPortfolio  =Exportar Portfolio
 heading.group  =Grupo {0}:
 heading.totalLearners  =N\u00famero de estudiantes:
 heading.totalLearnersInGroup  =N\u00famero total de estudiantes en grupo:
@@ -68,12 +51,6 @@ label.cancel  =Cancelar
 label.created  =Creado
 label.lastModified  =\u00daltima modificacion
 label.notebookEntry  =Anotaci\u00f3n
-error.missingParam  =No se puede continuar. Se require {0}
-error.exceedMaxFileSize  =El tama\u00f1o del archivo es excede el tama\u00f1o permitido.
-error.exception.NbApplication  =Ha ocurrido un error interno en Pixlr. Por favor reporte el siguiente problema: {0}
-error.defineLater  =El instructor est\u00e1 realizando cambios al contenido de esta actividad. Por favor espere a que termine.
-errors.maxfilesize  =El archivo que ha tratado de a\u00f1adir es mayor al m\u00e1ximo permito: {0} bytes.
-error.mandatoryField  ={0} no puede dejarse en blanco.
 button.try.again  =Intentar nuevamente
 button.finish  =Finalizar
 message.alertContentEdit  =Advertencia: uno o mas estudiantes ya han accedido a esta actividad. Cambiar el contenido de la misma resultar\u00e1 en que estudiantes reciban distinta informaci\u00f3n.
@@ -124,6 +101,9 @@ pageTitle.admin  =Administraci\u00f3n Pixlr
 admin.return  =Volver a Administraci\u00f3n LAMS
 output.desc.image.url.definition.pixlr  =URL de la imagen de Pixlr
 button.submit  =Finalizar
+message.no.reflection.available  =No hay reflexiones
+label.image.options  =Opciones
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 118 labels for es ES =====
+#======= End labels: Exported 98 labels for es ES =====
