--- a/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_images/conf/language/lams/ApplicationResources_en_AU.properties
@@ -2,7 +2,7 @@ appName = images
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Fri Dec 02 23:39:24 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sat Dec 03 19:55:50 CST 2016 
  
 #=================== labels for Image Gallery =================# 
 
@@ -10,7 +10,7 @@ appName  =Image Gallery
 activity.description  =Gallery to share images with others.
 label.authoring.basic.instruction  =Instructions
 activity.helptext  =Uploading your images to share with others.
-tool.display.name  =Image Gallery Tool
+tool.display.name  =Image Gallery tool
 tool.description  =Tool for sharing images.
 errorPage.title  =Error page
 errorPage.heading  =Some error occurs when handling your request
@@ -99,12 +99,8 @@ message.monitoring.edit.activity.not.editable  =This activity is no longer edita
 output.desc.learner.number.of.images.uploaded  =Number of images uploaded by user
 output.desc.learner.number.of.comments  =Number of comments posted by user
 output.desc.learner.number.of.votes  =Number of images selected as favorite by user
-export.title  =Export portfolio of Image Gallery
-error.resource.item.desc.blank  =Comment/Instruction can not be blank
-error.resource.item.title.blank  =Title can not be blank.
 error.resource.image.not.alowed.format  =Allowed file formats: gif, png, jpg
 error.resource.image.not.alowed.format.for  =Error occurred uploading {0}. Allowed file formats: gif, png, jpg
-error.resource.item.url.blank  =URL can not be blank.
 error.resource.item.file.blank  =File can not be blank.
 error.resource.image.comment.blank  =Comment can not be blank.
 error.upload.failed  =Upload file failed: {0}
@@ -128,10 +124,10 @@ label.cancel  =Cancel
 define.later.message  =Please wait for the instructor to complete the contents of this activity.
 message.monitoring.summary.no.resource.for.group  =No resource available for this group.
 button.try.again  =Try again
-page.title.monitoring.view.reflection  =View Notebook Entries
+page.title.monitoring.view.reflection  =Notebook entries
 message.no.reflection.available  =No notebook available
-title.reflection  =Notebook Entry
-monitoring.user.reflection  =Notebook Entry
+title.reflection  =Notebook entry
+monitoring.user.reflection  =Notebook entry
 activity.title  =Image Gallery
 label.authoring.save.button  =Save
 monitoring.label.access.time  =Access time
@@ -172,7 +168,7 @@ label.image.options  =Image options
 label.activity.completion  =End of activity
 errors.maxfilesize  =Image exceeds maximum file size
 label.rating.criterias  =Rating criterias
-label.add.criteria  =Add Criteria
+label.add.criteria  =Add criteria
 label.number.of.votes  ={0} / {1} votes
 label.rate.limits.reminder  =Rating limitation: Minimum {0} and Maximum {1}.
 label.rate.limits.topic.reminder  =You have rated {0} images already.
@@ -190,4 +186,4 @@ label.comment.textarea.tip  =Type your comment here then click on the green tick
 warning.minimum.number.words  =There is a minimum required number of words in a comment is {0}
 
 
-#======= End labels: Exported 182 labels for en AU =====
+#======= End labels: Exported 178 labels for en AU =====
