LDEV-4054 updating English

--- a/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
+++ b/lams_tool_assessment/conf/language/lams/ApplicationResources.properties
@@ -2,7 +2,7 @@ appName = assessment
 #language code: en 
 #locale code: AU 
 
- # Exported from the LAMS Community by Ernie Ghiglione on Sat Nov 19 03:12:33 CST 2016 
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:13:25 CST 2016 
  
 #=================== labels for Assessment =================# 
 
@@ -11,8 +11,6 @@ activity.description  =Tool for assessing learners
 activity.helptext  =Create questions to assess learners.
 tool.display.name  =Assessment Tool
 tool.description  =Tool for assessing learners.
-errorPage.title  =Error page
-errorPage.heading  =Some error occurs when handling your request
 label.authoring.heading  =Assessment Authoring
 label.author.title  =Assessment
 label.authoring.heading.basic  =Basic
@@ -108,10 +106,6 @@ error.default.grade.wrong.format  =Default question grade should be of numeric f
 error.penalty.factor.wrong.format  =Penalty factor should be of float format
 error.question.name.blank  =Question name can not be blank.
 error.question.text.blank  =Question text can not be blank.
-error.msg.upload.file.not.found  =Could not find upload file {0}.
-error.msg.file.not.found  =File not found exception occurs when uploading file.
-error.msg.io.exception  =IOException occurs when uploading file.
-error.msg.invaid.param.upload  =InvalidParameterException occured while trying to upload File.
 error.msg.default.content.not.find  =Could not retrieve default content record for this tool.
 error.monitoring.export.excel  =Export assessment report failed because of this reason: {0}
 authoring.msg.cancel.save  =Do you want to close this window without saving?
@@ -140,7 +134,7 @@ label.learning.summary.minutes  =minutes
 label.learning.summary.grade  =Grade
 label.learning.summary.out.of.maximum  =out of a maximum of
 label.learning.summary.feedback  =Feedback
-label.learning.question.summary.history.responces  =History of Responses:
+label.learning.question.summary.history.responces  =History of responses:
 label.learning.question.summary.response  =Response
 label.learning.question.summary.grade  =Grade
 label.learning.countdown.time.left  =Time left
@@ -162,7 +156,7 @@ label.monitoring.summary.user.name  =Name
 label.monitoring.summary.total  =Total
 label.monitoring.summary.learner.summary  =Learner summary
 label.monitoring.user.summary.history.responses  =User's history of responses
-label.monitoring.user.summary.user.name  =User Name
+label.monitoring.user.summary.user.name  =Username
 label.monitoring.user.summary.number.attempts  =Number of attempts
 label.monitoring.user.summary.time.last.attempt  =Time in the last attempt
 label.monitoring.user.summary.last.attempt.grade  =Last attempt grade
@@ -181,14 +175,11 @@ label.monitoring.question.summary.penalty  =Penalty
 label.monitoring.question.summary.average.mark  =Average mark
 label.monitoring.question.summary.group  =Group:
 label.monitoring.question.summary.ok  =Ok
-label.export.portfolio.activity.summary  =Activity summary
-label.export.portfolio.question.summaries  =Question summaries
 message.monitoring.edit.activity.not.editable  =This Activity is no longer editable.
-output.desc.learner.total.score  =User's total score
+output.desc.learner.total.score  =Last total score
 output.desc.learner.time.taken  =Time taken
 output.desc.learner.number.of.attempts  =Number of attempts made by user
 output.user.score.for.question  =User's score for the question:
-export.title  =Export portfolio of Assessment tool
 error.form.validation.error  =You have 1 error in a form. It has been highlighted
 error.form.validation.errors  =You have {0} errors in a form. They have been highlighted
 error.form.validation.hundred.score  =One of the answers should have a grade of 100% so it is possible to get full marks for this question.
@@ -203,7 +194,6 @@ label.authoring.heading.advance  =Advanced
 label.down  =Move down
 label.finished  =Next Activity
 label.finish  =Finished
-error.msg.repository  =A repository error occurred while trying to upload the file.
 label.on  =On
 label.off  =Off
 monitor.summary.th.advancedSettings  =Advanced settings
@@ -221,7 +211,7 @@ label.export.time.taken  =Time taken from activity start (seconds)
 label.export.average  =Average
 label.export.summary.by.user  =Summary by learner
 lable.export.summary.by.question  =Summary by question
-label.export.user.id  =User ID
+label.export.user.id  =Username
 label.authoring.basic.allow.learners.rich.editor  =Allow learners to use rich text editor
 label.authoring.advance.allow.students.right.answers  =Indicate choice(s) that have been answered correctly.
 label.authoring.advance.allow.students.wrong.answers  =Indicate choice(s) that have been answered incorrectly.
@@ -303,6 +293,8 @@ output.desc.best.score  =Best score
 label.tool.output.has.been.changed  =Tool Output has been changed
 output.desc.first.score  =First score
 output.desc.average.score  =Average score
+label.waiting.for.leader.launch.time.limit  =Leader has not started the activity. Please wait until he/she commences it.
+label.waiting.for.leader.finish  =Time limit set by teacher is over. Please wait until a group leader finishes the activity.
 
 
-#======= End labels: Exported 297 labels for en AU =====
+#======= End labels: Exported 289 labels for en AU =====
