LDEV-4054 updating English, Greek and Spanish

--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_en_AU.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_en_AU.properties
@@ -1,16 +1,17 @@
 appName = mindmap 
 #language code: en 
 #locale code: AU 
+
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:23:25 CST 2016 
+ 
 #=================== labels for Mindmap =================# 
 
 appName  =mindmap
-error.contentrepository  =An error has occurred when saving/deleting instruction file {0}. The files may not be saved correctly.
 activity.helptext  =Mindmap for making mindmaps
-error.content.locked  =The content has been locked since it is being used by one or more learners. The modification of the content is not allowed.
 tool.display.name  =Mindmap
 tool.description  =Mindmap Tool
 activity.title  =Mindmap
-activity.description  =Mindmap Tool
+activity.description  =Mindmap tool
 pageTitle.authoring  =Mindmap Authoring
 button.basic  =Basic
 button.advanced  =Advanced
@@ -19,10 +20,6 @@ label.authoring.basic.content  =Content:
 advanced.reflectOnActivity  =Add a notebook at the end of Mindmap
 advanced.lockOnFinished  =Lock when finished
 advanced.multiUserMode  =Use multi-user mode
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Filename
-label.type  =Type
 pageTitle.learning  =Online Mindmap
 message.defineLaterSet  =Please wait for the instructor to complete the contents of this activity
 pageTitle.monitoring  =Mindmap Monitoring
@@ -32,17 +29,16 @@ button.statistics  =Statistics
 titleHeading.summary  =Summary
 titleHeading.statistics  =Statistics
 titleHeading.editActivity  =Edit Activity
-titleHeading.exportPortfolio  =Export Portfolio
 heading.group  =Group {0}:
 heading.totalLearners  =Number of Learners:
-heading.totalLearnersInGroup  =Total Number of Learners in Group:
-heading.totalFinishedLearnersInGroup  =Number of Finished Learners:
+heading.totalLearnersInGroup  =Total number of learners in group:
+heading.totalFinishedLearnersInGroup  =Number of finished learners:
 message.summary  =There is no summary available for this tool.
 label.view  =View
 label.multimode  =Multi-mode
-label.notAvailable  =Not Available
+label.notAvailable  =Not available
 heading.learner  =Learner
-heading.mindmapEntry  =Mindmap Entry
+heading.mindmapEntry  =Mindmap entry
 button.cancel  =Cancel
 button.ok  =OK
 button.done  =Done
@@ -57,16 +53,8 @@ label.lastModified  =Last modified
 label.notebookEntry  =Notebook entry
 label.notebookInstructions  =Notebook instructions
 label.mindmapEntry  =Mindmap
-error.missingParam  =Unable to continue. {0} is missing.
-error.exceedMaxFileSize  =File size exceeded
-error.exception.NbApplication  =An internal error has occured with the Mindmap Tool. If reporting this error, please report: <br/> <b>{0}</b>
-error.defineLater  =Sorry, the activity is not ready yet. Please wait for the instructor to finishing defining the activity.
-errors.maxfilesize  =The uploaded file has exceeded the maximum file size limit of {0} bytes
-error.mandatoryField  ={0} field is mandatory.
-error.mark.invalid.number  ={0} field must be a valid number. Decimal points are not allowed.
-error.mark.invalid.decimal.number  ={0} field must be a valid decimal number.
 authoring.msg.cancel.save  =Do you want to close this window without saving?
-button.try.again  =Try Again
+button.try.again  =Try again
 message.learner.blank.input  =You have not written anything. Are you sure this is correct?
 button.finish  =Next Activity
 message.warnLockOnFinish  =Note: After you click on "Next Activity" and you come back to this Mindmap, you won't be able to continue editing nodes.
@@ -81,9 +69,8 @@ label.authoring.down  =Down
 label.authoring.edit  =Edit
 message.contentInUseSet  =Modification of content is not allowed since one or more learners has attempted the activity.
 message.alertContentEdit  =Warning: One of more learners have accessed this activity. Changing this content will result in learners getting different information.
-message.enableJavaScript  =Enable Javascript for Mindmap to load!
 output.desc.number.of.nodes  =Number of ideas
-node.root.defaultName  =Main Idea
+node.root.defaultName  =Main idea
 node.child1.defaultName  =Sub idea 1
 node.child2.defaultName  =Sub idea 2
 node.instructor.label  =Instructor
@@ -105,6 +92,8 @@ monitor.summary.notification  =Notification
 monitor.summary.date.restriction.set  =Deadline has been set
 monitor.summary.date.restriction.removed  =Deadline has been removed
 button.submit  =Finish
+label.mindmap.options  =Mindmap options
+label.activity.completion  =End of activity
 
 
-#======= End labels: Exported 102 labels for en AU =====
+#======= End labels: Exported 88 labels for en AU =====
