--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_es_ES.properties
@@ -2,14 +2,12 @@ appName = mindmap
 #language code: es 
 #locale code: ES 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:23:22 CST 2016 
  
 #=================== labels for Mindmap =================# 
 
 appName  =Lluvia de ideas
-error.contentrepository  =Se produjo un error al guardar / borrar archivo de instrucciones {0}. Los archivos no se guardaron correctamente.
 activity.helptext  =Lluvia de ideas para crear lluvia de ideas
-error.content.locked  =El contenido ha sido bloqueado, ya que est\u00e1 siendo utilizado por uno o m\u00e1s estudiantes. La modificaci\u00f3n del contenido no est\u00e1 permitida.
 tool.display.name  =Lluvia de ideas
 tool.description  =Lluvia de ideas
 activity.title  =Lluvia de ideas
@@ -22,10 +20,6 @@ label.authoring.basic.content  =Contenido:
 advanced.reflectOnActivity  =Agregar anotador al finalizar
 advanced.lockOnFinished  =No permitir modificaciones una vez terminado
 advanced.multiUserMode  =Modo de multiples usuarios
-instructions.type.online  =Online
-instructions.type.offline  =Offline
-label.filename  =Nombre de archivo
-label.type  =Tipo
 pageTitle.learning  =Lluvia de ideas online
 message.defineLaterSet  =Por favor, espere a que el profesor finalice el contenido de esta actividad.
 pageTitle.monitoring  =Lluvia de ideas seguimiento
@@ -35,7 +29,6 @@ button.statistics  =Estad\u00edsticas
 titleHeading.summary  =Resumen
 titleHeading.statistics  =Estad\u00edsticas
 titleHeading.editActivity  =Editar actividad
-titleHeading.exportPortfolio  =Exportar portfolio
 heading.group  =Grupo {0}:
 heading.totalLearners  =N\u00famero de estudiantes:
 heading.totalLearnersInGroup  =N\u00famero total de estudiantes en el grupo:
@@ -60,14 +53,6 @@ label.lastModified  =Modificado por \u00faltima vez
 label.notebookEntry  =Reflexi\u00f3n
 label.notebookInstructions  =Instrucciones para anotador
 label.mindmapEntry  =LLuvia de ideas
-error.missingParam  =No se puede continuar. {0} no se encuentra.
-error.exceedMaxFileSize  =Ha superado el tama\u00f1o m\u00e1ximo de archivo
-error.exception.NbApplication  =Ha ocurrido un error en el modulo Lluvia de Ideas. Por favor reporte el siguiente error a su administrador de sistema: {0}
-error.defineLater  =Lo sentimos, la actividad no est\u00e1 lista todav\u00eda. Por favor, espere que el profesor termine de definir la actividad.
-errors.maxfilesize  =El archivo subido ha superado el l\u00edmite m\u00e1ximo de tama\u00f1o de archivo de {0} bytes
-error.mandatoryField  ={0} campo es obligatorio.
-error.mark.invalid.number  ={0} de campo debe ser un n\u00famero v\u00e1lido. Puntos decimales no est\u00e1n permitidos.
-error.mark.invalid.decimal.number  ={0} campo debe ser un n\u00famero decimal v\u00e1lido.
 authoring.msg.cancel.save  =\u00bfQuieres cerrar la ventana sin guardar?
 button.try.again  =Intente nuevamente
 message.learner.blank.input  =Usted no ha escrito nada. \u00bfEst\u00e1s seguro de que esto es correcto?
@@ -84,7 +69,6 @@ label.authoring.down  =Abajo
 label.authoring.edit  =Editar
 message.contentInUseSet  =Modificaci\u00f3n del contenido no est\u00e1 permitido ya que uno o m\u00e1s estudiantes ha comenzado la actividad.
 message.alertContentEdit  =Advertencia: Uno de los m\u00e1s estudiantes han accedido a esta actividad. La modificaci\u00f3n de este contenido dar\u00e1 lugar a los estudiantes para obtener informaci\u00f3n diferente.
-message.enableJavaScript  =Habilitar Javascript para cargar Mindmap
 output.desc.number.of.nodes  =N\u00famero de ideas
 node.root.defaultName  =Idea principal
 node.child1.defaultName  =Sub idea 1
@@ -108,6 +92,8 @@ monitor.summary.notification  =Notificaci\u00f3n
 monitor.summary.date.restriction.set  =Restricci\u00f3n de fecha activada
 monitor.summary.date.restriction.removed  =Restricci\u00f3n de fecha desactivada
 button.submit  =Finalizar
+label.mindmap.options  =Options
+label.activity.completion  =Al finalizar actividad
 
 
-#======= End labels: Exported 102 labels for es ES =====
+#======= End labels: Exported 88 labels for es ES =====
