--- a/lams_tool_mindmap/conf/language/lams/ApplicationResources_el_GR.properties
+++ b/lams_tool_mindmap/conf/language/lams/ApplicationResources_el_GR.properties
@@ -2,19 +2,12 @@ appName = mindmap
 #language code: el 
 #locale code: GR 
 
-
+ # Exported from the LAMS Community by Ernie Ghiglione on Sun Dec 04 00:23:23 CST 2016 
  
 #=================== labels for Mindmap =================# 
 
 appName  =\u03bd\u03bf\u03b7\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c7\u03ac\u03c1\u03c4\u03b7\u03c2
-error.contentrepository  =\u0388\u03bd\u03b1 \u03bb\u03ac\u03b8\u03bf\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03b5\u03bc\u03c6\u03b1\u03bd\u03b9\u03c3\u03c4\u03b5\u03af \u03ba\u03b1\u03c4\u03ac \u03c4\u03b7\u03bd \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7/\u03b4\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae \u03c4\u03bf\u03c5 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03bf\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd {0}. \u03a4\u03b1 \u03b1\u03c1\u03c7\u03b5\u03af\u03b1 \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03bc\u03b7\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03b8\u03bf\u03cd\u03bd \u03c3\u03c9\u03c3\u03c4\u03ac.
-button.instructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2
-instructions.uploadOfflineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.uploadOnlineInstr  =\u0391\u03c1\u03c7\u03b5\u03af\u03bf \u039f\u03b4\u03b7\u03b3\u03b9\u03ce\u03bd \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.offlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7  \u03c7\u03c9\u03c1\u03af\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
-instructions.onlineInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03b3\u03b9\u03b1 \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7:
 activity.helptext  =\u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c7\u03ac\u03c1\u03c4\u03b7\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b7 \u03b4\u03b7\u03bc\u03b9\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03bd\u03bf\u03b7\u03c4\u03b9\u03ba\u03ce\u03bd \u03c7\u03b1\u03c1\u03c4\u03ce\u03bd
-error.content.locked  =\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03ad\u03c7\u03b5\u03b9 \u03ba\u03bb\u03b5\u03b9\u03b4\u03ce\u03c3\u03b5\u03b9 \u03b1\u03c6\u03bf\u03cd \u03c7\u03c1\u03b7\u03c3\u03b9\u03bc\u03bf\u03c0\u03bf\u03b9\u03b5\u03af\u03c4\u03b1\u03b9 \u03b1\u03c0\u03cc \u03ad\u03bd\u03b1\u03bd \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03c5\u03c2 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03c5\u03c2. \u0397 \u03bc\u03b5\u03c4\u03b1\u03c4\u03c1\u03bf\u03c0\u03ae \u03c4\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9
 tool.display.name  =\u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c7\u03ac\u03c1\u03c4\u03b7\u03c2
 tool.description  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03bf\u03cd/\u0395\u03bd\u03bd\u03bf\u03b9\u03bf\u03bb\u03bf\u03b3\u03b9\u03ba\u03bf\u03cd \u03a7\u03ac\u03c1\u03c4\u03b7
 activity.title  =\u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c7\u03ac\u03c1\u03c4\u03b7\u03c2
@@ -22,25 +15,13 @@ activity.description  =\u0395\u03c1\u03b3\u03b1\u03bb\u03b5\u03af\u03bf \u039d\u
 pageTitle.authoring  =\u03a3\u03c5\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03bf\u03cd \u03a7\u03ac\u03c1\u03c4\u03b7
 button.basic  =\u0392\u03b1\u03c3\u03b9\u03ba\u03ac
 button.advanced  =\u03a0\u03c1\u03bf\u03c7\u03c9\u03c1\u03b7\u03bc\u03ad\u03bd\u03b1
-button.upload  =\u0391\u03c0\u03bf\u03c3\u03c4\u03bf\u03bb\u03ae
 label.authoring.basic.title  =\u03a4\u03af\u03c4\u03bb\u03bf\u03c2
 label.authoring.basic.content  =\u03a0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf
 advanced.reflectOnActivity  =\u03a0\u03c1\u03bf\u03c3\u03b8\u03ae\u03ba\u03b7 \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5 \u03c3\u03c4\u03bf \u03c4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03bf\u03c5 \u03a7\u03ac\u03c1\u03c4\u03b7 \u0399\u03b4\u03b5\u03ce\u03bd
 advanced.lockOnFinished  =\u039d\u03b1 \u03ba\u03bb\u03b5\u03b9\u03b4\u03c9\u03b8\u03b5\u03af \u03cc\u03c4\u03b1\u03bd \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af
 advanced.multiUserMode  =\u039a\u03bf\u03b9\u03bd\u03ae-\u03a3\u03c5\u03bd\u03b5\u03c1\u03b3\u03b1\u03c4\u03b9\u03ba\u03ae \u03bb\u03b5\u03b9\u03c4\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03b1\u03c0\u03cc \u03bf\u03bc\u03ac\u03b4\u03b1 \u03c7\u03c1\u03b7\u03c3\u03c4\u03ce\u03bd
-instructions.type.online  =\u03a3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-instructions.type.offline  =\u03a7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
-label.filename  =\u038c\u03bd\u03bf\u03bc\u03b1 \u0391\u03c1\u03c7\u03b5\u03af\u03bf\u03c5
-label.type  =\u03a4\u03cd\u03c0\u03bf\u03c2
-label.attachments  =\u0395\u03c0\u03b9\u03c3\u03c5\u03bd\u03b1\u03c0\u03c4\u03cc\u03bc\u03b5\u03bd\u03b1
-link.view  =\u03a0\u03c1\u03bf\u03b2\u03bf\u03bb\u03ae
-link.download  =\u039b\u03ae\u03c8\u03b7
-link.delete  =\u0394\u03b9\u03b1\u03b3\u03c1\u03b1\u03c6\u03ae
-message.updateSuccess  =\u039f\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03cd\u03b8\u03b7\u03ba\u03b1\u03bd
-message.unsavedChanges  =\u0397 \u03c3\u03b5\u03bb\u03af\u03b4\u03b1 \u03c0\u03b5\u03c1\u03b9\u03ad\u03c7\u03b5\u03b9 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ad\u03c2 \u03c0\u03bf\u03c5 \u03b4\u03b5\u03bd \u03ad\u03c7\u03bf\u03c5\u03bd \u03b1\u03c0\u03bf\u03b8\u03b7\u03ba\u03b5\u03c5\u03b8\u03b5\u03af
 pageTitle.learning  =\u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c7\u03ac\u03c1\u03c4\u03b7\u03c2 \u03c3\u03b5 \u03b1\u03c0\u03b5\u03c5\u03b8\u03b5\u03af\u03b1\u03c2 \u03c3\u03cd\u03bd\u03b4\u03b5\u03c3\u03b7
 message.defineLaterSet  =\u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03cc\u03bc\u03b5\u03bd\u03bf \u03b1\u03c5\u03c4\u03ae\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2.
-message.runOfflineSet  =\u0391\u03c5\u03c4\u03ae \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b3\u03af\u03bd\u03b5\u03c4\u03b1\u03b9 \u03c3\u03c4\u03bf\u03bd \u03c5\u03c0\u03bf\u03bb\u03bf\u03b3\u03b9\u03c3\u03c4\u03ae. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03bf\u03cd\u03bc\u03b5 \u03bc\u03b9\u03bb\u03ae\u03c3\u03c4\u03b5 \u03bc\u03b5 \u03c4\u03bf\u03bd \u03ba\u03b1\u03b8\u03b7\u03b3\u03b7\u03c4\u03ae \u03c3\u03b1\u03c2 \u03b3\u03b9\u03b1 \u03c4\u03b9\u03c2 \u03bb\u03b5\u03c0\u03c4\u03bf\u03bc\u03ad\u03c1\u03b5\u03b9\u03b5\u03c2.
 pageTitle.monitoring  =\u0395\u03c0\u03bf\u03c0\u03c4\u03b5\u03af\u03b1 \u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03bf\u03cd \u03a7\u03ac\u03c1\u03c4\u03b7
 button.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7
 button.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
@@ -48,7 +29,6 @@ button.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
 titleHeading.summary  =\u03a0\u03b5\u03c1\u03af\u03bb\u03b7\u03c8\u03b7
 titleHeading.statistics  =\u03a3\u03c4\u03b1\u03c4\u03b9\u03c3\u03c4\u03b9\u03ba\u03ac
 titleHeading.editActivity  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1 \u0394\u03c1\u03b1\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-titleHeading.exportPortfolio  =\u0395\u03be\u03b1\u03b3\u03c9\u03b3\u03ae \u03c6\u03b1\u03ba\u03ad\u03bb\u03bf\u03c5 \u03b5\u03c1\u03b3\u03b1\u03c3\u03b9\u03ce\u03bd
 heading.group  =\u039f\u03bc\u03ac\u03b4\u03b1 {0}:
 heading.totalLearners  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd:
 heading.totalLearnersInGroup  =\u03a3\u03c5\u03bd\u03bf\u03bb\u03b9\u03ba\u03cc\u03c2 \u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u0395\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03bf\u03bc\u03ad\u03bd\u03c9\u03bd \u03c3\u03c4\u03b7\u03bd \u039f\u03bc\u03ac\u03b4\u03b1:
@@ -73,14 +53,6 @@ label.lastModified  =\u03a4\u03b5\u03bb\u03b5\u03c5\u03c4\u03b1\u03af\u03b1 \u03
 label.notebookEntry  =\u0395\u03b3\u03b3\u03c1\u03b1\u03c6\u03ae \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03ac\u03c1\u03b9\u03bf\u03c5
 label.notebookInstructions  =\u039f\u03b4\u03b7\u03b3\u03af\u03b5\u03c2 \u03a3\u03b7\u03bc\u03b5\u03b9\u03c9\u03bc\u03b1\u03c4\u03b1\u03c1\u03b9\u03bf\u03c5
 label.mindmapEntry  =\u039d\u03bf\u03b7\u03c4\u03b9\u03ba\u03cc\u03c2 \u03c7\u03ac\u03c1\u03c4\u03b7\u03c2
-error.missingParam  =\u0391\u03b4\u03cd\u03bd\u03b1\u03c4\u03b7 \u03b7 \u03c3\u03c5\u03bd\u03ad\u03c7\u03b5\u03b9\u03b1. \u039b\u03b5\u03af\u03c0\u03b5\u03b9 {0}
-error.exceedMaxFileSize  =\u03a4\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03b1\u03c1\u03c7\u03b5\u03af\u03bf\u03c5 \u03ad\u03c7\u03b5\u03b9 \u03c5\u03c0\u03b5\u03c1\u03b2\u03b5\u03af \u03c4\u03bf \u03b5\u03c0\u03b9\u03c4\u03c1\u03b5\u03c0\u03c4\u03cc \u03cc\u03c1\u03b9\u03bf.
-error.exception.NbApplication  =\u0388\u03bd\u03b1 \u03b5\u03c3\u03c9\u03c4\u03b5\u03c1\u03b9\u03ba\u03cc \u03bb\u03ac\u03b8\u03bf\u03c2 \u03ad\u03c7\u03b5\u03b9 \u03ba\u03b1\u03b9 \u03b1\u03c5\u03c4\u03ae \u03b7 \u03bb\u03b5\u03b9\u03c4\u03bf\u03c5\u03c1\u03b3\u03af\u03b1 \u03b4\u03b5\u03bd \u03bc\u03c0\u03bf\u03c1\u03b5\u03af \u03bd\u03b1 \u03bf\u03bb\u03bf\u03ba\u03bb\u03b7\u03c1\u03c9\u03b8\u03b5\u03af. \u0395\u03ac\u03bd \u03b1\u03bd\u03b1\u03c6\u03ad\u03c1\u03b5\u03c4\u03b5 \u03b1\u03c5\u03c4\u03bf \u03c4\u03bf \u03bb\u03ac\u03b8\u03bf\u03c2,\u03c5\u03c0\u03bf\u03b2\u03ac\u03bb\u03bb\u03b5\u03c4\u03b5 \u03c0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce : {0}
-error.defineLater  =\u039b\u03c5\u03c0\u03bf\u03cd\u03bc\u03b1\u03c3\u03c4\u03b5, \u03b7 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1 \u03b4\u03b5\u03bd \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03ba\u03cc\u03bc\u03b7 \u03ad\u03c4\u03bf\u03b9\u03bc\u03b7. \u03a0\u03b1\u03c1\u03b1\u03ba\u03b1\u03bb\u03ce \u03c0\u03b5\u03c1\u03b9\u03bc\u03ad\u03bd\u03b5\u03c4\u03b5 \u03b3\u03b9\u03b1 \u03c4\u03bf \u03b4\u03ac\u03c3\u03ba\u03b1\u03bb\u03bf \u03bd\u03b1 \u03c4\u03b5\u03bb\u03b5\u03b9\u03ce\u03c3\u03b5\u03b9 \u03c4\u03bf\u03bd \u03bf\u03c1\u03b9\u03c3\u03bc\u03cc \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
-errors.maxfilesize  =\u03a4\u03bf \u03b1\u03c1\u03c7\u03b5\u03af\u03bf \u03c0\u03bf\u03c5 \u03c3\u03c4\u03b5\u03af\u03bb\u03b1\u03c4\u03b5 \u03c5\u03c0\u03b5\u03c1\u03b2\u03b1\u03af\u03bd\u03b5\u03b9 \u03c4\u03bf \u03bc\u03ad\u03b3\u03b9\u03c3\u03c4\u03bf \u03b5\u03c0\u03b9\u03c4\u03c1\u03b5\u03c0\u03cc\u03bc\u03b5\u03bd\u03bf \u03bc\u03ad\u03b3\u03b5\u03b8\u03bf\u03c2 \u03c4\u03c9\u03bd {0} bytes.
-error.mandatoryField  =\u03a4\u03bf {0} \u03c0\u03b5\u03b4\u03af\u03bf \u03b5\u03af\u03bd\u03b1\u03b9 \u03c5\u03c0\u03bf\u03c7\u03c1\u03b5\u03c9\u03c4\u03b9\u03ba\u03cc
-error.mark.invalid.number  =\u03a4\u03bf {0} \u03c0\u03b5\u03b4\u03af\u03bf \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2. \u03b4\u03b5\u03ba\u03b1\u03b4\u03b9\u03ba\u03ac \u03c3\u03b7\u03bc\u03b5\u03af\u03b1 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03bf\u03bd\u03c4\u03b1\u03b9
-error.mark.invalid.decimal.number  =\u03a4\u03bf {0} \u03c0\u03b5\u03b4\u03af\u03bf \u03c0\u03c1\u03ad\u03c0\u03b5\u03b9 \u03bd\u03b1 \u03b5\u03af\u03bd\u03b1\u03b9 \u03ad\u03bd\u03b1\u03c2 \u03ad\u03b3\u03ba\u03c5\u03c1\u03bf\u03c2 \u03b4\u03b5\u03ba\u03b1\u03b4\u03b9\u03ba\u03cc\u03c2 \u03b1\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2
 authoring.msg.cancel.save  =\u0398\u03ad\u03bb\u03b5\u03c4\u03b5 \u03bd\u03b1 \u03ba\u03bb\u03b5\u03af\u03c3\u03b5\u03c4\u03b5 \u03c4\u03bf \u03c0\u03b1\u03c1\u03ac\u03b8\u03c5\u03c1\u03bf \u03c7\u03c9\u03c1\u03af\u03c2 \u03b1\u03c0\u03bf\u03b8\u03ae\u03ba\u03b5\u03c5\u03c3\u03b7;
 button.try.again  =\u03a0\u03c1\u03bf\u03c3\u03c0\u03ac\u03b8\u03ae\u03c3\u03b5 \u03be\u03b1\u03bd\u03ac.
 message.learner.blank.input  =\u0394\u03b5\u03bd \u03ad\u03c7\u03b5\u03c4\u03b5 \u03b3\u03c1\u03ac\u03c8\u03b5\u03b9 \u03c4\u03af\u03c0\u03bf\u03c4\u03b1. \u0395\u03af\u03c3\u03c4\u03b5 \u03c3\u03af\u03b3\u03bf\u03c5\u03c1\u03bf\u03b9 \u03cc\u03c4\u03b9 \u03b1\u03c5\u03c4\u03cc \u03b5\u03af\u03bd\u03b1\u03b9 \u03c4\u03bf \u03c3\u03c9\u03c3\u03c4\u03cc;
@@ -97,7 +69,6 @@ label.authoring.down  =\u039a\u03ac\u03c4\u03c9
 label.authoring.edit  =\u0395\u03c0\u03b5\u03be\u03b5\u03c1\u03b3\u03b1\u03c3\u03af\u03b1
 message.contentInUseSet  =\u0397 \u03c4\u03c1\u03bf\u03c0\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7 \u03c4\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b4\u03b5\u03bd \u03b5\u03c0\u03b9\u03c4\u03c1\u03ad\u03c0\u03b5\u03c4\u03b1\u03b9  \u03cc\u03c4\u03b1\u03bd  \u03ad\u03bd\u03b1\u03c2 \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03b9 \u03b5\u03ba\u03c0\u03b1\u03b9\u03b4\u03b5\u03c5\u03cc\u03bc\u03b5\u03bd\u03bf\u03b9 \u03ad\u03c7\u03bf\u03c5\u03bd \u03be\u03b5\u03ba\u03b9\u03bd\u03ae\u03c3\u03b5\u03b9 \u03c4\u03b7\u03bd \u03b5\u03ba\u03c0\u03cc\u03bd\u03b7\u03c3\u03ae \u03c4\u03b7\u03c2.
 message.alertContentEdit  =\u03a0\u03c1\u03bf\u03b5\u03b9\u03b4\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7: \u0388\u03bd\u03b1\u03c2 \u03ae \u03c0\u03b5\u03c1\u03b9\u03c3\u03c3\u03cc\u03c4\u03b5\u03c1\u03bf\u03b9 \u03c3\u03c0\u03bf\u03c5\u03b4\u03b1\u03c3\u03c4\u03ad\u03c2 \u03ad\u03c7\u03bf\u03c5\u03bd \u03c0\u03c1\u03cc\u03c3\u03b2\u03b1\u03c3\u03b7 \u03c3\u03b5 \u03b1\u03c5\u03c4\u03ae\u03bd \u03c4\u03b7\u03bd \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1. \u0397 \u03b1\u03bb\u03bb\u03b1\u03b3\u03ae \u03b1\u03c5\u03c4\u03bf\u03cd \u03c4\u03bf\u03c5 \u03c0\u03b5\u03c1\u03b9\u03b5\u03c7\u03bf\u03bc\u03ad\u03bd\u03bf\u03c5 \u03b8\u03b1 \u03bf\u03b4\u03b7\u03b3\u03ae\u03c3\u03b5\u03b9 \u03c4\u03bf\u03c5\u03c2 \u03c3\u03c0\u03bf\u03c5\u03b4\u03b1\u03c3\u03c4\u03ad\u03c2 \u03c3\u03b5 \u03b4\u03b9\u03b1\u03c6\u03bf\u03c1\u03b5\u03c4\u03b9\u03ba\u03ad\u03c2 \u03c0\u03bb\u03b7\u03c1\u03bf\u03c6\u03bf\u03c1\u03af\u03b5\u03c2.
-message.enableJavaScript  =\u0395\u03bd\u03b5\u03c1\u03b3\u03bf\u03c0\u03bf\u03b9\u03ae\u03c3\u03c4\u03b5 \u03c4\u03b7 Javascript \u03b3\u03b9\u03b1 \u03bd\u03b1 \u03c6\u03bf\u03c1\u03c4\u03c9\u03b8\u03b5\u03af \u03bf \u03a7\u03ac\u03c1\u03c4\u03b7\u03c2 \u0399\u03b4\u03b5\u03ce\u03bd.
 output.desc.number.of.nodes  =\u0391\u03c1\u03b9\u03b8\u03bc\u03cc\u03c2 \u03ba\u03cc\u03bc\u03b2\u03c9\u03bd
 node.root.defaultName  =\u039a\u03cd\u03c1\u03b9\u03b1 \u0399\u03b4\u03ad\u03b1
 node.child1.defaultName  =\u0394\u03b5\u03c5\u03c4\u03b5\u03c1\u03b5\u03cd\u03bf\u03c5\u03c3\u03b1 \u0399\u03b4\u03ad\u03b1 1
@@ -120,6 +91,9 @@ authoring.info.teacher.set.restriction  =\u039f \u03b5\u03ba\u03c0\u03b1\u03b9\u
 monitor.summary.notification  =\u039a\u03bf\u03b9\u03bd\u03bf\u03c0\u03bf\u03af\u03b7\u03c3\u03b7
 monitor.summary.date.restriction.set  =\u0388\u03c7\u03b5\u03b9 \u03c4\u03b5\u03b8\u03b5\u03af \u03c0\u03b5\u03c1\u03b9\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2 \u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1\u03c2/\u038f\u03c1\u03b1\u03c2
 monitor.summary.date.restriction.removed  =\u0388\u03c7\u03b5\u03b9 \u03b1\u03c6\u03b1\u03b9\u03c1\u03b5\u03b8\u03b5\u03af \u03bf \u03c0\u03b5\u03c1\u03b9\u03bf\u03c1\u03b9\u03c3\u03bc\u03cc\u03c2 \u0397\u03bc\u03b5\u03c1\u03bf\u03bc\u03b7\u03bd\u03af\u03b1\u03c2/\u038f\u03c1\u03b1\u03c2
+button.submit  =\u039f\u03bb\u03bf\u03ba\u03bb\u03ae\u03c1\u03c9\u03c3\u03b7
+label.mindmap.options  =\u0395\u03c0\u03b9\u03bb\u03bf\u03b3\u03ad\u03c2 \u03b5\u03bd\u03bf\u03b9\u03bf\u03bb\u03bf\u03b3\u03b9\u03ba\u03bf\u03cd \u03c7\u03ac\u03c1\u03c4\u03b7
+label.activity.completion  =\u03a4\u03ad\u03bb\u03bf\u03c2 \u03c4\u03b7\u03c2 \u03b4\u03c1\u03b1\u03c3\u03c4\u03b7\u03c1\u03b9\u03cc\u03c4\u03b7\u03c4\u03b1\u03c2
 
 
-#======= End labels: Exported 114 labels for el GR =====
+#======= End labels: Exported 88 labels for el GR =====
